--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/color-mode": "^3.5.2",
+    "@vueuse/core": "^12.5.0",
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest"
